projects/site/src/_internal/canvas/canvas.css
:host {
  --background: inherit;
  --padding: var(--nve-ref-space-xl) var(--nve-ref-space-lg);
  --overflow: auto;
  --height: 100%;
  display: block;
  width: 100%;
}

::slotted([id*='_content']) {
  display: contents;
}

:host([layer='highlight']),
:host([layer='container']) {
  --nve-sys-interaction-background: var(--nve-sys-interaction-background-200);
  --nve-sys-interaction-field-background: var(--nve-sys-interaction-field-background-200);
  --background: var(--nve-sys-layer-container-background);
}

:host([layer='highlight']) {
  slot:not([name]) {
    background: linear-gradient(to right, #4e54c8, #8f94fb) !important;
  }
}

nve-codeblock {
  --padding: var(--nve-ref-space-lg);
  --border-radius: 0;
  font-size: var(--nve-ref-font-size-200);
}

nve-toolbar {
  --border-radius: 0;
  --padding: var(--nve-ref-space-xxs);
  --border-bottom: 0;
  --min-height: fit-content;
  overflow: hidden;
  border-bottom-right-radius: var(--nve-ref-border-radius-md);
  border-bottom-left-radius: var(--nve-ref-border-radius-md);
  border-top: var(--nve-ref-border-width-sm) solid var(--nve-ref-border-color-muted);
}

slot:not([name]) {
  border-top-left-radius: var(--nve-ref-border-radius-md);
  border-top-right-radius: var(--nve-ref-border-radius-md);
  background: var(--background);
  padding: var(--padding);
  overflow: var(--overflow);
  min-height: var(--height);
  display: block;
  resize: horizontal;
  min-width: 120px;
  width: 100%;
}

::slotted(iframe) {
  height: var(--height) !important;
}

:host([align='center']) slot:not([name]) {
  display: flex;
  justify-content: center;
  align-items: center;
}

slot[name='suffix'] {
  display: block;
  gap: var(--nve-ref-space-xs);
  display: flex;
}

nve-select[container='flat'] {
  --font-weight: var(--nve-ref-font-weight-semibold);
  --border-bottom: 0;
  width: 54px;
}

nve-select::part(_caret) {
  display: none;
}

.resizer {
  display: flex;
  align-items: stretch;
  min-height: 80px;
}

.preview-backdrop {
  background: var(--nve-ref-color-alpha-black-400);
  min-height: 100%;
  flex: 1;
}

[internal-host] {
  border: var(--nve-ref-border-width-sm) solid var(--nve-ref-border-color-muted);
  border-radius: var(--nve-ref-border-radius-md);
}

.code {
  position: relative;
  margin-top: 1px;
}

.toolbar {
  display: flex;
  gap: var(--nve-ref-space-xxs);
  padding: var(--nve-ref-space-xxs);
  border-top: var(--nve-ref-border-width-sm) solid var(--nve-ref-border-color-muted);
}

.source-button {
  margin-right: auto;
}

nve-copy-button {
  position: absolute;
  top: 4px;
  right: 4px;
}

[internal-host]:has(.code[hidden]) {
  nve-select {
    display: none;
  }
}

